Bug 454128 - Pipewire screen share restore does not restore after the next session
Summary: Pipewire screen share restore does not restore after the next session
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.24.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-21 04:10 UTC by Samuel Reddy
Modified: 2022-05-25 23:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Reddy 2022-05-21 04:10:05 UTC
SUMMARY
If you check the box for allowing restore for future sessions, it will not ask you for the next session, but the session after that, it will ask you again to share your screen. I tested using OBS Studio.


STEPS TO REPRODUCE
1. Use an app the supports Pipewire screen capture(OBS Studio Wayland)
2. Share screen with the restore screen share checkbox checked
3. Close the app
4. Open the app
5. Close the app
6. Open the app
7. It asks you to share your screen again.

OBSERVED RESULT
Pipewire screen sharing only restores for one session, before asking you to share the screen again.

EXPECTED RESULT
Pipewire screen sharing should be restored for every session.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.4
Kernel Version: 5.17.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × AMD Ryzen 5 3450U with Radeon Vega Mobile Gfx
Memory: 5.7 GiB of RAM
Graphics Processor: AMD Radeon Vega 8 Graphics
Manufacturer: Dell Inc.
Product Name: Inspiron 3505
System Version: 1.4.9

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-05-25 14:30:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/101
Comment 2 Aleix Pol 2022-05-25 23:30:02 UTC
Git commit d782e10c63a7ac9e939512fa9e2352aa3343d143 by Aleix Pol.
Committed on 25/05/2022 at 14:39.
Pushed by apol into branch 'master'.

screencast: Keep persisting if the user chose to persist

M  +1    -1    src/screencast.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/d782e10c63a7ac9e939512fa9e2352aa3343d143
Comment 3 Aleix Pol 2022-05-25 23:30:37 UTC
Git commit fce184a2fb3ee626e7e2328248580ce7382b6125 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 25/05/2022 at 23:30.
Pushed by apol into branch 'Plasma/5.25'.

screencast: Keep persisting if the user chose to persist


(cherry picked from commit d782e10c63a7ac9e939512fa9e2352aa3343d143)

M  +1    -1    src/screencast.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/fce184a2fb3ee626e7e2328248580ce7382b6125