screencast: Keep persisting if the user chose to persist

BUG: 454128


(cherry picked from commit d782e10c63a7ac9e939512fa9e2352aa3343d143)